--- a/index.html
+++ b/index.html
@@ -133,10 +133,10 @@
     <div class="container">
       <div class="hero-slider">
       <div class="hero-slider-item">
-        <div class="row"><h2 class="text-lighten">2020年5月新発寒 開設</h2>
-        </div>
         <div class="row">
           <div class="col-md-8">
+            <div class="row"><h1 class="text-lighten"> ２０２０年５月新発寒 開設</h1>
+            </div>
             <h2 class="text-white" data-animation-out="fadeOutRight" data-delay-out="5" data-duration-in=".3"
               data-animation-in="fadeInLeft" data-delay-in=".1">厚生労働省認定<br>児童通所施設<br>すみれ</h2>
             <p class="text-muted mb-4" data-animation-out="fadeOutRight" data-delay-out="5" data-duration-in=".3" data-animation-in="fadeInLeft" data-delay-in=".4">施設見学・相談随時受付中</p>
@@ -276,7 +276,7 @@
   <div class="container">
     <div class="row align-items-center">
       <div class="col-md-6 order-2 order-md-1">
-          <h2 class="mb-0 text-nowrap mr-3">通所や利用方法など施設に関する<br>よくある質問</h2>        
+          <h2 class="mb-0 text-nowrap mr-3">利用方法など施設に関する<br>よくある質問</h2>        
           <a href="https://masaaki-ozaki.github.io/sumire-sample/qa" class="btn btn-primary-outline">よくある質問</a>
       </div>
       <div class="col-md-6 order-1 order-md-2 mb-4 mb-md-0">
