--- a/about/index.html
+++ b/about/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en-us">
-
 <head>
   <meta charset="utf-8">
   <title>Our Courses</title>
@@ -22,7 +21,6 @@
   <link rel="shortcut icon" href="https://masaaki-ozaki.github.io/sumire-sample/images/favicon.ico" type="image/x-icon">
   <link rel="icon" href="https://masaaki-ozaki.github.io/sumire-sample/images/favicon.ico" type="image/x-icon">
 </head>
-
 <body>
   <!-- preloader start -->
   <div class="preloader">
@@ -99,7 +97,6 @@
       </div>
     </div>
   </header>
-
   <section class="page-title-section overlay"
     style="background-image: url('/images/backgrounds/page-title.jpg'),url('/images/backgrounds/page-title.jpg');">
     <div class="container">
@@ -112,9 +109,9 @@
             <li class="list-inline-item text-white h3 font-secondary">施設概要</li>
           </ul>
           <p class="text-lighten">
-           すみれは、運動を通じて子供たちが、「よく遊び」、「よく学ぶ」空間を作ることを心がけています。
+            すみれは、運動を通じて子供たちが、「よく遊び」、「よく学ぶ」空間を作ることを心がけています。
           </p>
-           <p class="text-lighten">
+          <p class="text-lighten">
             お子様のテーマやペースに合わせてプランを立てていき,
             日々の小さな成長に気付き共に喜び合い自立する力を応援しています。
           </p>
@@ -122,63 +119,70 @@
       </div>
     </div>
   </section>
-  
-  <section class="section mb-4">
-    <div class="row">
-      <div class="col-lg-12">
-        <h2 class="section-title">施設の様子</h2>
-      </div>
-    </div>
+  <section class="section-sm">
     <div class="container">
       <div class="row">
-      <div class="row filtr-container">
-        <div data-category="responsible" class="col-lg-6 col-sm-12 filtr-item">
-          <div class="card border-bottom rounded-0 hover-shadow mb-5">
-            <div class="card-body">
-              <img>
-            </div>
+        <div class="col-12">
+          <div class="d-flex align-items-center section-title justify-content-between">
+            <h2 class="mb-0 text-nowrap mr-3">施設の写真</h2>
+            <div class="border-top w-100 border-primary d-none d-sm-block"></div>
           </div>
         </div>
-        <div data-category="responsible" class="col-lg-6 col-sm-12 filtr-item">
-          <div class="card border-bottom rounded-0 hover-shadow mb-5">
-            <div class="card-body">
-              <h4 class="card-title">今野</a></h4>
-              <p>児童指導員</p>
+      </div>
+      <div class="row justify-content-center">
+        <div class="col-lg-4 col-sm-6 mb-5">
+          <div class="card p-0 border-primary rounded-0 hover-shadow">
+            <img class="card-img-top rounded-0"
+              src="https://themes.gohugo.io//theme/educenter-hugo/images/courses/course-5.jpg" alt="Algorithm">
             </div>
+        </div>
+        <div class="col-lg-4 col-sm-6 mb-5">
+          <div class="card p-0 border-primary rounded-0 hover-shadow">
+            <img class="card-img-top rounded-0"
+              src="https://themes.gohugo.io//theme/educenter-hugo/images/courses/course-5.jpg" alt="Algorithm">
+            </div>
+        </div>
+        <div class="col-lg-4 col-sm-6 mb-5">
+          <div class="card p-0 border-primary rounded-0 hover-shadow">
+            <img class="card-img-top rounded-0"
+              src="https://themes.gohugo.io//theme/educenter-hugo/images/courses/course-5.jpg" alt="Algorithm">
+            </div>
+        </div>
+        <div class="col-lg-4 col-sm-6 mb-5">
+          <div class="card p-0 border-primary rounded-0 hover-shadow">
+            <img class="card-img-top rounded-0"
+              src="https://themes.gohugo.io//theme/educenter-hugo/images/courses/course-5.jpg" alt="Algorithm">
+            </div>
+        </div>
+        <div class="col-lg-4 col-sm-6 mb-5">
+          <div class="card p-0 border-primary rounded-0 hover-shadow">
+            <img class="card-img-top rounded-0"
+              src="https://themes.gohugo.io//theme/educenter-hugo/images/courses/course-5.jpg" alt="Algorithm">
+            </div>
+        </div>
+        <div class="col-lg-4 col-sm-6 mb-5">
+          <div class="card p-0 border-primary rounded-0 hover-shadow">
+            <img class="card-img-top rounded-0"
+              src="https://themes.gohugo.io//theme/educenter-hugo/images/courses/course-5.jpg" alt="Algorithm">
+            </div>
+        </div>
+    </div>
+  </section>
+  <section class="section">
+    <div class="container">
+      <div class="row">
+        <div class="col-12">
+          <div class="d-flex align-items-center section-title justify-content-between">
+            <h2 class="mb-0 text-nowrap mr-3">アクセス</h2>
           </div>
         </div>
-        <div data-category="responsible" class="col-lg-6 col-sm-12 filtr-item">
-          <div class="card border-bottom rounded-0 hover-shadow mb-5">
-            <div class="card-body">
-              <h4 class="card-title">金川</a></h4>
-              <p>児童指導員</p>
-            </div>
+      </div>
+      <div class="row align-items-center">
+        <div class="col-md-6 order-2 order-md-1">
+          <div class="col-md-6 order-1 order-md-2 mb-4 mb-md-0">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d2912.3383665655942!2d141.2790272!3d43.1184176!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5f0b2636d31a6da7%3A0x57d238caea46fed0!2z44CSMDA2LTA4MDcg5YyX5rW36YGT5pyt5bmM5biC5omL56iy5Yy65paw55m65a-S77yX5p2h77yU5LiB55uu77yS4oiS77yT!5e0!3m2!1sja!2sjp!4v1585374085995!5m2!1sja!2sjp" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
           </div>
-        </div>
-        <div data-category="responsible" class="col-lg-6 col-sm-12 filtr-item">
-          <div class="card border-bottom rounded-0 hover-shadow mb-5">
-            <div class="card-body">
-              <h4 class="card-title">赤田</a></h4>
-              <p>保育士</p>
-            </div>
           </div>
-        </div>
-        <div data-category="responsible" class="col-lg-6 col-sm-12 filtr-item">
-          <div class="card border-bottom rounded-0 hover-shadow mb-5">
-            <div class="card-body">
-              <h4 class="card-title">殿村</a></h4>
-              <p>保育士</p>
-            </div>
-          </div>
-        </div>
-        <div data-category="responsible" class="col-lg-6 col-sm-12 filtr-item">
-          <div class="card border-bottom rounded-0 hover-shadow mb-5">
-            <div class="card-body">
-              <h4 class="card-title">椿</a></h4>
-              <p>指導員</p>
-            </div>
-          </div>
-        </div>
       </div>
     </div>
   </section>
@@ -290,5 +294,4 @@
   <script src="https://masaaki-ozaki.github.io/sumire-sample/js/script.min.js"></script>
   <!-- google analitycs -->
 </body>
-
 </html>
