施設概要作成

--- a/about/index.html
+++ b/about/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en-us">
+
 <head>
   <meta charset="utf-8">
   <title>Our Courses</title>
@@ -21,6 +22,7 @@
   <link rel="shortcut icon" href="https://masaaki-ozaki.github.io/sumire-sample/images/favicon.ico" type="image/x-icon">
   <link rel="icon" href="https://masaaki-ozaki.github.io/sumire-sample/images/favicon.ico" type="image/x-icon">
 </head>
+
 <body>
   <!-- preloader start -->
   <div class="preloader">
@@ -134,41 +136,41 @@
           <div class="card p-0 border-primary rounded-0 hover-shadow">
             <img class="card-img-top rounded-0"
               src="https://themes.gohugo.io//theme/educenter-hugo/images/courses/course-5.jpg" alt="Algorithm">
-            </div>
+          </div>
         </div>
         <div class="col-lg-4 col-sm-6 mb-5">
           <div class="card p-0 border-primary rounded-0 hover-shadow">
             <img class="card-img-top rounded-0"
               src="https://themes.gohugo.io//theme/educenter-hugo/images/courses/course-5.jpg" alt="Algorithm">
-            </div>
+          </div>
         </div>
         <div class="col-lg-4 col-sm-6 mb-5">
           <div class="card p-0 border-primary rounded-0 hover-shadow">
             <img class="card-img-top rounded-0"
               src="https://themes.gohugo.io//theme/educenter-hugo/images/courses/course-5.jpg" alt="Algorithm">
-            </div>
+          </div>
         </div>
         <div class="col-lg-4 col-sm-6 mb-5">
           <div class="card p-0 border-primary rounded-0 hover-shadow">
             <img class="card-img-top rounded-0"
               src="https://themes.gohugo.io//theme/educenter-hugo/images/courses/course-5.jpg" alt="Algorithm">
-            </div>
+          </div>
         </div>
         <div class="col-lg-4 col-sm-6 mb-5">
           <div class="card p-0 border-primary rounded-0 hover-shadow">
             <img class="card-img-top rounded-0"
               src="https://themes.gohugo.io//theme/educenter-hugo/images/courses/course-5.jpg" alt="Algorithm">
-            </div>
+          </div>
         </div>
         <div class="col-lg-4 col-sm-6 mb-5">
           <div class="card p-0 border-primary rounded-0 hover-shadow">
             <img class="card-img-top rounded-0"
               src="https://themes.gohugo.io//theme/educenter-hugo/images/courses/course-5.jpg" alt="Algorithm">
-            </div>
+          </div>
         </div>
-    </div>
+      </div>
   </section>
-  <section class="section">
+  <section class="section mb-3">
     <div class="container">
       <div class="row">
         <div class="col-12">
@@ -178,12 +180,28 @@
         </div>
       </div>
       <div class="row align-items-center">
-        <div class="col-md-6 order-2 order-md-1">
-          <div class="col-md-6 order-1 order-md-2 mb-4 mb-md-0">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d2912.3383665655942!2d141.2790272!3d43.1184176!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5f0b2636d31a6da7%3A0x57d238caea46fed0!2z44CSMDA2LTA4MDcg5YyX5rW36YGT5pyt5bmM5biC5omL56iy5Yy65paw55m65a-S77yX5p2h77yU5LiB55uu77yS4oiS77yT!5e0!3m2!1sja!2sjp!4v1585374085995!5m2!1sja!2sjp" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
-          </div>
-          </div>
+        <div class="col-6">
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d2912.3383665655942!2d141.2790272!3d43.1184176!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5f0b2636d31a6da7%3A0x57d238caea46fed0!2z44CSMDA2LTA4MDcg5YyX5rW36YGT5pyt5bmM5biC5omL56iy5Yy65paw55m65a-S77yX5p2h77yU5LiB55uu77yS4oiS77yT!5e0!3m2!1sja!2sjp!4v1585374085995!5m2!1sja!2sjp"
+            frameborder="0" style="border:1;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+        </div>
+        <div class="col-6">
+          <h4>・札幌市営地下鉄東西線 宮の沢駅から バス 16分</h4>
+        </div>
       </div>
+    </div>
+  </section>
+  <section class="section bg-primary mb-3">
+    <div class="container">
+      <div class="row">
+        <div class="col-12 text-center">
+          <h3 class="text-white font-secondary mb-0">
+            是非一度、ご見学にお越しください。
+          </h3>
+          <h2 class="section-title text-white">見学・相談随時受付中</h2>
+          <a href="https://masaaki-ozaki.github.io/sumire-sample/contact" class="btn btn-secondary">お問い合せ</a>
+        </div>
+    </div>
     </div>
   </section>
   <footer>
@@ -294,4 +312,5 @@
   <script src="https://masaaki-ozaki.github.io/sumire-sample/js/script.min.js"></script>
   <!-- google analitycs -->
 </body>
+
 </html>
