--- a/index.html
+++ b/index.html
@@ -175,27 +175,27 @@
 
 
   <section class="section bg-primary">
-    <div class="d-flex align-items-center section-title justify-content-between">
-      <h2 class="mb-0">お知らせ</h2>
-    </div>
     <div class="container">
       <div class="row">
-        <div class="col-12 text-left">
-          <div class="col-lg-12 col-sm-12 text-sm-left">
-            <div class="card p-0 border-primary rounded-0 hover-shadow">
-              <div class="card-body">
-                <ul class="list-inline mb-2">
-                  <li class="list-inline-item"><i class="ti-calendar"></i> 2019/05/01</li>
-                  <li class="list-inline-item">
-                    <h5 class="card-title">児童発達支援・放課後等デイサービス すみれがオープンしました</h5>
-                  </li>
-                </ul>
+        <div class="d-flex align-items-center section-title justify-content-between">
+          <h2 class="mb-0">お知らせ</h2>
+        </div>
+        <div class="row">
+          <div class="col-12 text-left">
+            <div class="col-lg-12 col-sm-12 text-sm-left">
+              <div class="card p-0 border-primary rounded-0 hover-shadow">
+                <div class="card-body">
+                  <ul class="list-inline mb-2">
+                    <li class="list-inline-item"><i class="ti-calendar"></i> 2019/05/01</li>
+                    <li class="list-inline-item">
+                      <h5 class="card-title">児童発達支援・放課後等デイサービス すみれがオープンしました</h5>
+                    </li>
+                  </ul>
+                </div>
               </div>
             </div>
           </div>
-          </div>
-      </div>
-    </div>
+        </div>
   </section>
 
   <section class="section">
