一日のスケジュール追加

--- a/about/index.html
+++ b/about/index.html
@@ -121,6 +121,53 @@
       </div>
     </div>
   </section>
+  
+  <section class="section bg-cover">
+    <div class="container">
+      <div class="row">
+        <div class="col-12 mb-0">
+          <div class="d-flex align-items-center section-title justify-content-between">
+            <h2 class="text-nowrap mr-3">1日のスケジュール</h2>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-lg-12 col-sm-12 mb-0 position-relative ">
+          <h4 class="section-title">放課後等デイサービス</h4>
+        </div>
+        <div class="col-lg-6 col-sm-12 position-relative ">
+          <img class="card-img-top rounded-0"
+          src="https://masaaki-ozaki.github.io/images/about/scheduleDayservice.png">
+        </div>
+        <div class="col-lg-6 col-sm-12">
+          <div class="bg-white p-5">
+            <p></p>
+            <p>学校通学中の児童の放課後や夏休みなどの長期休暇中において生活能力向上のための支援を継続的に提供することにより、学校教育とサービス支援によるお子様の自立の促進、放課後当の居場所作りを行います。</p>
+            <p>友達との関わり合いの中で、「待つ」ことや「思いやり」などを学び集団の中で社会性を身につけコミュニケーション能力を習得します。</p>
+            <p></p>
+          </div>
+        </div>
+        <div class="col-lg-12 col-sm-12 mb-0 position-relative ">
+          <h4 class="section-title">児童発達支援</h4>
+        </div>
+        <div class="col-lg-6 col-sm-12 mb-0">
+          <div class="p-0 rounded-0 hover-shadow">
+            <img class="card-img-top rounded-0"
+              src="https://masaaki-ozaki.github.io/images/about/scheduleShien.png">
+          </div>
+        </div>
+        <div class="col-lg-6 col-sm-12">
+          <div class="bg-white p-5">
+            <p></p>
+            <p>発育に遅れがある就学前（義務教育年齢に達していない児童）の日常生活における基本動作や周囲の人の援助を受けず自分自身が活動できる「自活」に必要な知識の習得や一緒にあそんだり、おしゃべりを死ながらコミュニケーションをはかり集団生活への適応のための訓練を行う療育サービスです。</p>
+            <p>個々の特性を考慮し無理のない個別の目標を長期と短期で計画し療育を進めています。</p>
+            <p></p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
   <section class="section-sm">
     <div class="container">
       <div class="row">
@@ -179,7 +226,11 @@
           </div>
         </div>
       </div>
-      <div class="row align-items-center">
+      <div class="row">
+        <div class="col-12">
+          <h5>所在地：〒006-0807 札幌市手稲区新発寒7条4丁目2-3</h5>
+        </div>     
+        <div class="row">
         <div class="col-12">
           <iframe
             src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d2912.3383665655942!2d141.2790272!3d43.1184176!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5f0b2636d31a6da7%3A0x57d238caea46fed0!2z44CSMDA2LTA4MDcg5YyX5rW36YGT5pyt5bmM5biC5omL56iy5Yy65paw55m65a-S77yX5p2h77yU5LiB55uu77yS4oiS77yT!5e0!3m2!1sja!2sjp!4v1585374085995!5m2!1sja!2sjp"
