--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 
   <section class="section bg-primary">
     <div class="container">
-      <div class="row">
+      <div class="row col-12">
         <div class="d-flex align-items-center section-title justify-content-between">
           <h2 class="mb-0">お知らせ</h2>
         </div>
